--- a/src/app/modules/usuarios/pages/mantenimiento-usuarios/pages/inicio/inicio.component.html
+++ b/src/app/modules/usuarios/pages/mantenimiento-usuarios/pages/inicio/inicio.component.html
@@ -2,7 +2,7 @@
     <div class="">
         <h2>Hola mundo</h2>
         <p>
-            Sidenav <--
+            Sidenav 
         </p>
     </div>
 </div>
